--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -1,6 +1,7 @@
 {
   "build_entry_point": "docs",
   "need_generate_pdf": false,
+  "need_preview_pull_request": true,
   "need_generate_intellisense": false,
   "docsets_to_publish": [
     {
@@ -25,7 +26,7 @@
   "notification_subscribers": [],
   "branches_to_filter": [],
   "skip_source_output_uploading": false,
-  "need_preview_pull_request": true,
+  "git_repository_branch_open_to_public_contributors": "master",
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
