--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -26,7 +26,7 @@
   "notification_subscribers": [],
   "branches_to_filter": [
     "maste-sync-work",
-    "live-sync-work",
+    "live-sync-work"
   ],
   "skip_source_output_uploading": false,
   "git_repository_branch_open_to_public_contributors": "master",
