--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -5,9 +5,9 @@
   "need_generate_intellisense": false,
   "docsets_to_publish": [
     {
-      "docset_name": "azure-cli-docs",
+      "docset_name": "e2eppe-azure-cli-docs",
       "build_source_folder": ".",
-      "build_output_subfolder": "cli/azure",
+      "build_output_subfolder": "e2eppe-azure-cli-docs",
       "locale": "en-us",
       "version": 0,
       "open_to_public_contributors": true,
@@ -38,7 +38,7 @@
     {
       "path_to_root": "_themes",
       "url": "https://github.com/Microsoft/templates.docs.msft",
-      "branch": "master",
+      "branch": "master-prerelease",
       "branch_mapping": {}
     }
   ],
