--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -31,7 +31,7 @@
     }
   ],
   "notification_subscribers": [],
-  "branches_to_filter": [],
+  "branches_to_filter": ["master-sync-work","live-sync-work"],
   "skip_source_output_uploading": false,
   "git_repository_branch_open_to_public_contributors": "master",
   "dependent_repositories": [
